Fixed mis-alignement of album description in index view (thread ID 63990)

--- a/cpg1.5.x/css/coppermine.css
+++ b/cpg1.5.x/css/coppermine.css
@@ -161,6 +161,10 @@ div#film {
     overflow:hidden; 
 }
 
+.clearer {
+    clear:both;
+}
+
 /* Styles for the standard button lists.
 ------------------------------------------------------- */
 .buttonlist ul {
